--- a/package.json
+++ b/package.json
@@ -1,25 +1,44 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
-  },
-  "private": true
+   "main": "node_modules/expo/AppEntry.js",
+   "scripts": {
+      "start": "expo start",
+      "android": "expo start --android",
+      "ios": "expo start --ios",
+      "web": "expo start --web",
+      "eject": "expo eject"
+   },
+   "dependencies": {
+      "@react-native-async-storage/async-storage": "^1.15.7",
+      "@react-navigation/bottom-tabs": "^6.0.5",
+      "@react-navigation/native": "^6.0.2",
+      "@react-navigation/stack": "^6.0.7",
+      "@types/react-native-loading-spinner-overlay": "^0.5.3",
+      "@types/react-redux": "^7.1.18",
+      "@types/redux-logger": "^3.0.9",
+      "@types/redux-saga": "^0.10.5",
+      "expo": "~42.0.1",
+      "expo-app-loading": "^1.1.2",
+      "expo-status-bar": "~1.0.4",
+      "react": "16.13.1",
+      "react-dom": "16.13.1",
+      "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+      "react-native-elements": "^3.4.2",
+      "react-native-gesture-handler": "^1.10.3",
+      "react-native-loading-spinner-overlay": "^2.0.0",
+      "react-native-safe-area-context": "3.2.0",
+      "react-native-web": "~0.13.12",
+      "react-redux": "^7.2.4",
+      "react-saga": "^0.3.1",
+      "redux": "^4.1.1",
+      "redux-devtools-extension": "^2.13.9",
+      "redux-logger": "^3.0.6",
+      "rn-animated-snackbar": "^1.0.1"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.9.0",
+      "@types/react": "~16.9.35",
+      "@types/react-native": "~0.63.2",
+      "typescript": "~4.0.0"
+   },
+   "private": true
 }
