--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
       "react-native-elements": "^3.4.2",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-loading-spinner-overlay": "^2.0.0",
+      "react-native-pager-view": "5.0.12",
       "react-native-safe-area-context": "3.2.0",
+      "react-native-step-indicator": "^1.0.3",
       "react-native-web": "~0.13.12",
       "react-redux": "^7.2.4",
       "react-saga": "^0.3.1",
