feat : child, area code

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "react-native-elements": "^3.4.2",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-loading-spinner-overlay": "^2.0.0",
+      "react-native-modal-selector": "^2.0.8",
       "react-native-pager-view": "5.0.12",
       "react-native-safe-area-context": "3.2.0",
       "react-native-step-indicator": "^1.0.3",
