feat : connect api

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "@types/react-redux": "^7.1.18",
       "@types/redux-logger": "^3.0.9",
       "@types/redux-saga": "^0.10.5",
+      "axios": "^0.21.1",
       "expo": "~42.0.1",
       "expo-app-loading": "^1.1.2",
       "expo-status-bar": "~1.0.4",
@@ -32,6 +33,7 @@
       "react-native-web": "~0.13.12",
       "react-redux": "^7.2.4",
       "react-saga": "^0.3.1",
+      "react-xml-parser": "^1.1.8",
       "redux": "^4.1.1",
       "redux-devtools-extension": "^2.13.9",
       "redux-logger": "^3.0.6",
