--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "axios": "^0.21.1",
       "expo": "~42.0.1",
       "expo-app-loading": "^1.1.2",
+      "expo-image-picker": "^10.2.3",
       "expo-status-bar": "~1.0.4",
       "react": "16.13.1",
       "react-dom": "16.13.1",
@@ -26,6 +27,7 @@
       "react-native-elements": "^3.4.2",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-loading-spinner-overlay": "^2.0.0",
+      "react-native-modal": "^13.0.0",
       "react-native-modal-selector": "^2.0.8",
       "react-native-pager-view": "5.0.12",
       "react-native-safe-area-context": "3.2.0",
