--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
       "axios": "^0.21.1",
       "expo": "~42.0.1",
       "expo-app-loading": "^1.1.2",
+      "expo-clipboard": "~1.1.0",
+      "expo-constants": "~11.0.1",
       "expo-image-picker": "^10.2.3",
+      "expo-notifications": "^0.12.3",
       "expo-status-bar": "~1.0.4",
       "react": "16.13.1",
       "react-dom": "16.13.1",
