--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "@react-navigation/bottom-tabs": "^6.0.5",
       "@react-navigation/native": "^6.0.2",
       "@react-navigation/stack": "^6.0.7",
+      "@types/pubnub": "^4.29.4",
       "@types/react-native-loading-spinner-overlay": "^0.5.3",
       "@types/react-redux": "^7.1.18",
       "@types/redux-logger": "^3.0.9",
@@ -22,14 +23,19 @@
       "expo-clipboard": "~1.1.0",
       "expo-constants": "~11.0.1",
       "expo-image-picker": "^10.2.3",
+      "expo-location": "^12.1.2",
       "expo-notifications": "^0.12.3",
       "expo-status-bar": "~1.0.4",
+      "pubnub": "^4.33.0",
+      "pubnub-react": "^2.1.0",
       "react": "16.13.1",
       "react-dom": "16.13.1",
       "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+      "react-native-dotenv": "^3.2.0",
       "react-native-elements": "^3.4.2",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-loading-spinner-overlay": "^2.0.0",
+      "react-native-maps": "^0.29.3",
       "react-native-modal": "^13.0.0",
       "react-native-modal-selector": "^2.0.8",
       "react-native-pager-view": "5.0.12",
