--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "splash": {
          "image": "./assets/splash.png",
          "resizeMode": "contain",
-         "backgroundColor": "#ffffff"
+         "backgroundColor": "#fdfcf8"
       },
       "updates": {
          "fallbackToCacheTimeout": 0
@@ -20,7 +20,7 @@
       "android": {
          "adaptiveIcon": {
             "foregroundImage": "./assets/adaptive-icon.png",
-            "backgroundColor": "#FFFFFF"
+            "backgroundColor": "#fdfcf8"
          },
          "permissions": ["RECEIVE_BOOT_COMPLETED"],
          "package": "com.callmeshin75.passta"
