--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
       "react-native-elements": "^3.4.2",
       "react-native-gesture-handler": "^1.10.3",
+      "react-native-global-props": "^1.1.5",
       "react-native-loading-spinner-overlay": "^2.0.0",
       "react-native-modal": "^13.0.0",
       "react-native-modal-selector": "^2.0.8",
