--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "expo-clipboard": "~1.1.0",
       "expo-constants": "~11.0.1",
       "expo-image-picker": "^10.2.3",
+      "expo-linear-gradient": "^9.2.0",
       "expo-notifications": "^0.12.3",
       "expo-status-bar": "~1.0.4",
       "react": "16.13.1",
