--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "expo-clipboard": "~1.1.0",
       "expo-constants": "~11.0.1",
       "expo-image-picker": "^10.2.3",
+      "expo-keep-awake": "~9.2.0",
       "expo-location": "^12.1.2",
       "expo-notifications": "^0.12.3",
       "expo-status-bar": "~1.0.4",
