--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "expo-location": "^12.1.2",
       "expo-notifications": "^0.12.3",
       "expo-status-bar": "~1.0.4",
+      "lottie-react-native": "4.0.2",
       "pubnub": "^4.33.0",
       "pubnub-react": "^2.1.0",
       "react": "16.13.1",
