style : change home name

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
    "expo": {
-      "name": "paasta-front",
-      "slug": "paasta-front",
+      "name": "kid-in",
+      "slug": "kid-in",
       "version": "1.0.0",
       "orientation": "portrait",
       "icon": "./assets/icon.png",
